# YochirenSSE-Extractor

./: .gitignore  README.md  app.py  pyproject.toml
notebooks/: Yochiren_downloader.ipynb
scripts/: build_sse_catalog.py
