[project]
name = "yochiren"
version = "0.1.0"
description = "PDF figures cropper and extractor for Yochiren slow-slip event reports"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "openai>=2.7.2",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pymupdf>=1.26.6",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ruff>=0.14.4",
]
